<resources>
    <string name="app_name">ProjectMngr</string>

    <!-- Intro Activity strings start -->
    <string name="image_contentDescription">image</string>
    <string name="let_s_get_started_text">Let\'s Get started</string>
    <string name="intro_text_description">Collaborate and Plan Together Across Multiple Devices on Projemanag’s Minimalist Interface.</string>
    <string name="sign_in">SIGN IN</string>
    <string name="sign_up">SIGN UP</string>
    <!-- Intro Activity strings end -->

    <!-- Sign Up Activity strings start -->
    <string name="sign_up_description_text">Enter your name, email id and password, to register with us.</string>
    <!-- Sign Up Activity strings end -->

    <!-- Sign Up Activity and Sign In Activity strings start -->
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <!-- Sign Up Activity and Sign In Activity strings end -->

    <!-- Sign In Activity strings start -->
    <string name="sign_in_description_text">Enter your name, email id and password, to register with us.</string>
    <!-- Sign In Activity strings end -->

    <string name="please_click_back_again_to_exit">Please click back again to exit.</string>

    <!-- dialog_progress strings start -->
    <string name="please_wait">Please Wait…</string>
    <!-- dialog_progress strings end -->

    <!-- navigation view strings start -->
    <string name="nav_my_profile">My Profile</string>
    <string name="nav_sign_out">Sign Out</string>
    <!-- navigation view strings end -->

    <!-- MyProfileActivity strings start -->
    <string name="mobile">Mobile</string>
    <string name="update">UPDATE</string>
    <string name="my_profile">My Profile</string>
    <!-- MyProfileActivity strings end -->

    <!-- CreateBoardActivity strings start -->
    <string name="create_board_title">Create Board</string>
    <string name="create">CREATE</string>
    <string name="board_name">Board Name</string>
    <!-- CreateBoardActivity strings end -->

    <!-- main activity strings start -->
    <string name="no_boards_are_available">No Boards are available!</string>
    <!-- main activity strings end -->

    <!-- task item strings start -->
    <string name="action_add_list">Add List</string>
    <string name="hint_list_name">List Name</string>
    <string name="action_add_card">Add Card</string>
    <string name="hint_card_name">Card Name</string>
    <string name="add_list">Add List</string>
    <!-- task item strings end -->

    <!-- member activity strings start -->
    <string name="members">Members</string>
    <string name="add_member">Add Member</string>
    <string name="cancel">CANCEL</string>
    <string name="add">ADD</string>
    <string name="search_member">Search Member</string>
    <!-- member activity strings end -->

    <!-- card details strings start -->
    <string name="label_color">Label Color</string>
    <string name="select_color">Select Color</string>
    <string name="select_members">Select Members</string>
    <string name="due_date">Due Date</string>
    <string name="select_due_date">Select Due Date</string>
    <string name="delete_card">Delete Card</string>
    <string name="alert">Alert</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="confirmation_message_to_delete_card">Are you sure you want to delete card \'%1$s\'?</string>
    <string name="str_select_label_color">Select Label Color</string>
    <string name="str_select_member">Select Member</string>
    <!-- card details strings end -->

    <string name="default_notification_channel_id">projectmngr_notification_channel_id</string>

</resources>