<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@drawable/ic_background"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    tools:context=".SignInActivity" >

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarSignInActivity"
        android:layout_height="?attr/actionBarSize"
        android:layout_width="match_parent" >

        <TextView
            android:id="@+id/textViewTitleSignIn"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:textStyle="bold"
            android:textSize="@dimen/toolbar_title_text_size"
            android:textColor="@color/primary_text_color"
            android:text="@string/sign_in"
            android:gravity="center_vertical"/>

    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/authentication_screen_content_marginTop"
        android:layout_gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginEnd="@dimen/authentication_screen_marginStartEnd"
            android:layout_marginStart="@dimen/authentication_screen_marginStartEnd"
            android:textSize="@dimen/authentication_description_text_size"
            android:textColor="@color/secondary_text_color"
            android:text="@string/sign_in_description_text"
            android:gravity="center" />

        <androidx.cardview.widget.CardView
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginTop="@dimen/authentication_screen_card_view_marginTop"
            android:layout_marginEnd="@dimen/authentication_screen_marginStartEnd"
            android:layout_marginStart="@dimen/authentication_screen_marginStartEnd"
            app:cardCornerRadius="@dimen/card_view_corner_radius"
            android:elevation="@dimen/card_view_elevation">

            <LinearLayout
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:padding="@dimen/card_view_layout_content_padding"
                android:orientation="vertical">


                <com.google.android.material.textfield.TextInputLayout
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:layout_marginTop="@dimen/authentication_screen_til_marginTop"
                    android:layout_marginEnd="@dimen/authentication_screen_til_marginStartEnd"
                    android:layout_marginStart="@dimen/authentication_screen_til_marginStartEnd">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/editTextEmailSignIn"
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent"
                        android:textSize="@dimen/et_text_size"
                        android:inputType="textEmailAddress"
                        android:hint="@string/email"/>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:layout_marginTop="@dimen/authentication_screen_til_marginTop"
                    android:layout_marginEnd="@dimen/authentication_screen_til_marginStartEnd"
                    android:layout_marginStart="@dimen/authentication_screen_til_marginStartEnd">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/editTextPasswordSignIn"
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent"
                        android:textSize="16sp"
                        android:inputType="textPassword"
                        android:hint="@string/password"/>
                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/buttonSignIn"
                    android:background="@drawable/shape_button_rounded"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:layout_marginTop="@dimen/sign_up_screen_btn_marginTop"
                    android:layout_gravity="center"
                    android:layout_marginEnd="@dimen/btn_marginStartEnd"
                    android:layout_marginStart="@dimen/btn_marginStartEnd"
                    android:textSize="@dimen/btn_text_size"
                    android:textColor="@android:color/white"
                    android:text="@string/sign_in"
                    android:gravity="center"
                    android:paddingBottom="@dimen/btn_paddingTopBottom"
                    android:paddingTop="@dimen/btn_paddingTopBottom"
                    android:foreground="?attr/selectableItemBackground"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
</LinearLayout>